$HOME/.config/eww/eww.scss
// Theme colors
$active-color: #9c9977;
$focused-color: #7c7755;
$normal-color: #ccc8b0;
$text-color: #423f2e;
$urgent-color: #33a999;

// Layout
$spacing: 15px;

// Base styles
window {
    color: $text-color;
    font-family: "DejaVu Sans Condensed", "DejaVu Sans Mono", sans-serif;
    font-size: 16px;
}

button {
    all: unset;

    &:hover {
        background: $focused-color;
    }

    &:active {
        background: $active-color;
    }
}

// Common classes
.icon {
    font-family: FontAwesome;
}

.bar {
    background: $normal-color;
}

.revealer {
    transition: 250ms ease-out;
}

// Widget styles
.battery,
.datetime,
.temperature {
    padding: $spacing 0;
}

.battery__label,
.datetime__label,
.temperature__label,
.volume__label {
    padding-bottom: $spacing;
}

.datetime {
    &:hover {
        background: $focused-color;
    }

    &__date,
    &__time {
        font-size: 14px;
    }

    &__date {
        padding-bottom: 5px;
    }
}

.desktops__desktop {
    border-bottom: 1px solid $focused-color;
    color: inherit;
    padding: $spacing;

    &--occupied {
        background: $active-color;
    }

    &--focused {
        /* Must be below --occupied to take precedence */
        background: $focused-color;
    }

    &--urgent {
        /* Must be below --focused to take precedence */
        background: $urgent-color;
    }
}

.system .button,
.volume .button {
    padding: $spacing 0;
}

.systray {
    /* Systray popup menus can be styled with:
     * https://github.com/elkowar/eww/issues/1244
     */
    padding: $spacing 0;

    & > * {
        min-width: 48px;

        &:hover {
            background-color: $focused-color;
        }
    }
}

.bottom-section .widget {
    border-top: 1px solid $focused-color;
}

// Calendar styles
.calendar {
    background: $normal-color;
    border: 1px solid $focused-color;
    border-radius: 4px;
    padding: 8px;
}

